@@ -1,3 +1,7 @@
+2007-09-06  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/docgen/GtkPrint.py: More work on graphical reports.
+	* src/docgen/PdfDoc.py (PdfDoc.draw_box): Fix vertical pos. of shadow.
+
 2007-09-06  Benny Malengier <benny.malengier@gramps-project.org> 
 	* src/images/16x16/gramps-zoom-fit-width.png: delete
 	* src/images/22x22/gramps-zoom-fit-width.png:
